fix developer page word wrapping issue

--- a/static/css/overrides.scss
+++ b/static/css/overrides.scss
@@ -1,5 +1,5 @@
-@import "neat/neat";
-@import "bourbon/bourbon";
+@import "vendor/neat/neat";
+@import "vendor/bourbon/bourbon";
 @import "colors";
 
 .container {
@@ -21,6 +21,7 @@ ul.slim-list {
 
   li {
     padding-left: 0;
+    word-break: break-word;
   }
 }
 
